gccida/c3/report_diagnostic
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/report_diagnostic/src/diagnostic.c:1831:26: error: unknown type name 'diagnostic_context_0'; did you mean 'diagnostic_context'?
void  report_diagnostic( diagnostic_context_0 *dc) 
                         ^~~~~~~~~~~~~~~~~~~~
                         diagnostic_context
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/report_diagnostic/src/diagnostic.h:29:35: note: 'diagnostic_context' declared here
typedef struct diagnostic_context diagnostic_context;
                                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/report_diagnostic/src/diagnostic.c:1833:1: error: unknown type name 'output_buffer_0'; did you mean 'output_buffer'?
output_buffer_0 *v3; // rdi 
^~~~~~~~~~~~~~~
output_buffer
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/report_diagnostic/src/diagnostic.h:28:30: note: 'output_buffer' declared here
typedef struct output_buffer output_buffer;
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/report_diagnostic/src/diagnostic.c:1834:1: error: unknown type name 'output_buffer_0'; did you mean 'output_buffer'?
output_buffer_0 *v4; // rax 
^~~~~~~~~~~~~~~
output_buffer
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/report_diagnostic/src/diagnostic.h:28:30: note: 'output_buffer' declared here
typedef struct output_buffer output_buffer;
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/report_diagnostic/src/diagnostic.c:1855:7: error: use of undeclared identifier 'count_error_warning_message'
if ( !count_error_warning_message ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/report_diagnostic/src/diagnostic.c:1858:1: error: use of undeclared identifier 'count_error_warning_message'
count_error_warning_message = 1; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/report_diagnostic/src/diagnostic.c:1864:17: error: expected expression
v5 = *( _OWORD *)&diagnostic_buffer->state.prefix; 
                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/report_diagnostic/src/diagnostic.c:1864:9: error: use of undeclared identifier '_OWORD'
v5 = *( _OWORD *)&diagnostic_buffer->state.prefix; 
        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/report_diagnostic/src/diagnostic.c:1865:17: error: expected expression
v6 = *( _OWORD *)&diagnostic_buffer->state.indent_skip; 
                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/report_diagnostic/src/diagnostic.c:1865:9: error: use of undeclared identifier '_OWORD'
v6 = *( _OWORD *)&diagnostic_buffer->state.indent_skip; 
        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/report_diagnostic/src/diagnostic.c:1866:17: error: expected expression
v7 = *( _OWORD *)&diagnostic_buffer->state.cursor; 
                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/report_diagnostic/src/diagnostic.c:1866:9: error: use of undeclared identifier '_OWORD'
v7 = *( _OWORD *)&diagnostic_buffer->state.cursor; 
        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/report_diagnostic/src/diagnostic.c:1867:17: error: expected expression
v8 = *( _OWORD *)diagnostic_buffer->state.diagnostic_count; 
                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/report_diagnostic/src/diagnostic.c:1867:9: error: use of undeclared identifier '_OWORD'
v8 = *( _OWORD *)diagnostic_buffer->state.diagnostic_count; 
        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/report_diagnostic/src/diagnostic.c:1868:17: error: expected expression
v9 = *( _OWORD *)&diagnostic_buffer->state.diagnostic_count[4]; 
                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/report_diagnostic/src/diagnostic.c:1868:9: error: use of undeclared identifier '_OWORD'
v9 = *( _OWORD *)&diagnostic_buffer->state.diagnostic_count[4]; 
        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/report_diagnostic/src/diagnostic.c:1869:12: error: expected expression
*( _OWORD *)&diagnostic_buffer->state.cursor = *( _OWORD *)&dc->message; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/report_diagnostic/src/diagnostic.c:1869:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&diagnostic_buffer->state.cursor = *( _OWORD *)&dc->message; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/report_diagnostic/src/diagnostic.c:1869:59: error: expected expression
*( _OWORD *)&diagnostic_buffer->state.cursor = *( _OWORD *)&dc->message; 
                                                          ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/report_diagnostic/src/diagnostic.c:1869:51: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&diagnostic_buffer->state.cursor = *( _OWORD *)&dc->message; 
                                                  ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/report_diagnostic/src/obj/diagnostic.o] Error 1
